# apache-airflow

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: test.yaml
airflow-tutorial/: airflow_utils.py  basic_dag.py  branching.py  custom_operator.py  dag_dependency.py  dag_run_params.py  etl_example.py  operators.py  send_email_on_failure.py  subdag.py  task_group.py  taskflow_api.py  tasks_with_weight.py  test_example.py  xcom_example.py
airflow_tutorial/: basic_dag.py  basic_python_operator.py  branching.py  custom_operator.py  dag_dependency.py  dag_run_params.py  job_config.json  operators.py  send_email_on_failure.py  subdag.py  task_group.py  taskflow_api.py  tasks_with_weight.py  test_example.py  xcom_example.py
dags/: add_dags.py
ge/: README.md  ge_dag.py
ge/great_expectations/: great_expectations.yml
ge/great_expectations/checkpoints/: titanic_checkpoint.yml
ge/great_expectations/expectations/: .ge_store_backend_id  titanic_expectation_suite.json
maintenance/: airflow-log-cleanup.py  airflow_log_cleanup.py
postgres/: carrier.sql
